--- a/src/jade/partials/_head.jade
+++ b/src/jade/partials/_head.jade
@@ -8,7 +8,7 @@ mixin head()
 			meta(name="description", content="Where personalized medicine meets human brain mapping")
 			link(href="../css/style.min.css", rel="stylesheet")
 			link(rel="preconnect", href="https://fonts.gstatic.com/", crossorigin)
-			link(href="https://fonts.googleapis.com/css?family=Catamaran|Merriweather:400,700", rel="stylesheet")
+			link(href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600", rel="stylesheet")
 			link(rel="apple-touch-icon", sizes="180x180", href="../img/apple-touch-icon.png")
 			link(rel="icon", type="image/png", sizes="32x32", href="../img/favicon-32x32.png")
 			link(rel="icon", type="image/png", sizes="16x16", href="../img/favicon-16x16.png")
