--- a/tbi/src/scss/style.scss
+++ b/tbi/src/scss/style.scss
@@ -10,6 +10,7 @@
 // Variables =============================================================================
 $white: #ffffff;
 $black: #16161d;
+$light_black: tint($black, 10%);
 
 $mobile: 20em;
 $tablet: 40em;
@@ -17,6 +18,12 @@ $desktop: 60em;
 
 $blue: #1976d2;
 $red: red;
+
+$inferno-array: #000004, #160b39, #420a68, #6a176e, #932667, #ba3655, #dd513a,
+	#f3761b, #fca50a, #f6d746, #f6d746;
+
+$rainbow-array: #6e40aa, #be3caf, #fe4b83, #ff7747, #e3b62f, #b0ef5a, #53f666,
+	#1edfa2, #23acd8, #4c6fdc, #4c6fdc;
 
 :root {
 	--root-size: 90%;
@@ -55,9 +62,8 @@ body {
 	font-size: var(--root-size);
 	font-family: Source Sans Pro, Helvetica Neue, Helvetica, sans-serif;
 	line-height: 1.5;
-	background: $white;
-	color: $black;
 	background: $black;
+	color: $white;
 }
 
 .container,
@@ -70,14 +76,34 @@ body {
 	padding: var(--large);
 }
 
+// Typography ============================================================================
+h1 {
+	@extend %no-select;
+	font-size: 1.4em;
+}
+
+h2 {
+	font-size: 1.2em;
+}
+
+h3 {
+	font-size: 1em;
+}
+
 // Canvas ================================================================================
 .canvas-wrapper {
 	position: relative;
 	padding-bottom: 100%;
-	background: linear-gradient(tint($black, 10%), $black);
+	background: linear-gradient($light_black, $black);
+	cursor: move;
+	cursor: grab;
+
+	&:active {
+		cursor: grabbing;
+	}
 
 	@media (min-width: $tablet) {
-		padding-bottom: 60%;
+		padding-bottom: 50%;
 		border-radius: var(--radius);
 	}
 
@@ -95,10 +121,139 @@ body {
 	}
 }
 
-canvas {
+// Spinner ===============================================================================
+.spinner-wrapper {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
 }
 
+.spinner {
+	width: 50px;
+	height: 50px;
+	border: 2px solid;
+	border-color: $white $white transparent transparent;
+	border-radius: 50%;
+	animation: spin 0.6s linear infinite;
 
+	@keyframes spin {
+		to {
+			transform: rotate(1turn);
+		}
+	}
+}
 
+// Scale =================================================================================
+.intensity-container {
+	@extend %no-select;
 
+	display: inline-block;
+	font-size: 0.8em;
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	text-align: right;
+	color: $white;
+}
 
+.intensity-bar {
+	height: 0.25em;
+	width: 7em;
+	background: red;
+	background-image: linear-gradient(90deg, $inferno-array);
+}
+
+.intensity-label {
+	display: flex;
+	justify-content: space-between;
+}
+
+// Data sets =============================================================================
+.data-sets {
+	list-style: none;
+	margin-top: var(--large);
+
+	@media (min-width: $tablet) {
+		margin-top: 0;
+	}
+}
+
+.data-set {
+	display: flex;
+	align-items: center;
+	border-top: thin solid $light_black;
+	overflow: hidden;
+
+	&.is-running {
+		background: $light_black;
+	}
+
+	&:last-child {
+		border-bottom: thin solid $light_black;
+	}
+
+	@media (min-width: $tablet) {
+		display: inline-block;
+		vertical-align: top;
+		width: 15em;
+		margin: var(--large) var(--large) 0 0;
+		padding: var(--large);
+		border: thin solid $light_black;
+		border-radius: var(--radius);
+	}
+}
+
+.data-set-title {
+	flex: 1;
+	font-weight: 400;
+}
+
+.data-set-run {
+	@extend %no-select;
+	padding: var(--medium) var(--large);
+	background: nth($inferno-array, 10);
+	border: 0;
+	border-radius: var(--radius);
+	font-weight: 600;
+	cursor: pointer;
+	transition: background-color var(--transition);
+
+	&:hover {
+		background: nth($inferno-array, 9);
+		transition-duration: var(--transition-hover);
+	}
+
+	&:active {
+		background: nth($inferno-array, 8);
+		transition-duration: 0s;
+	}
+
+	.is-running & {
+		&,
+		&:hover {
+			pointer-events: none;
+			background: $black;
+			color: mix($black, $white);
+		}
+
+		&:after {
+			content: "ning";
+		}
+	}
+
+	@media (min-width: $tablet) {
+		padding: var(--small) var(--medium);
+		margin-top: var(--medium);
+		float: right;
+	}
+}
+
+// Copyright ============================================================================
+.copyright {
+	opacity: 0.5;
+}
