--- a/tbi/src/jade/partials/_head.jade
+++ b/tbi/src/jade/partials/_head.jade
@@ -4,8 +4,8 @@ mixin head()
 		head
 			meta(charset="utf-8")
 			meta(name="viewport", content="width=device-width, initial-scale=1, shrink-to-fit=no")
-			title The Open Brain Project
-			meta(name="description", content="Where personalized medicine meets human brain mapping")
+			title Traumatic Brain Injury Explorer
+			meta(name="description", content="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX")
 			link(href="../css/style.min.css", rel="stylesheet")
 			link(rel="preconnect", href="https://fonts.gstatic.com/", crossorigin)
 			link(href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600", rel="stylesheet")
